{
    "name": "AudioControls",
    "maps": [
        {
            "name": "AudioPlayer",
            "id": "c2984bec-69cb-4b07-af49-a01e4e1dd20d",
            "actions": [
                {
                    "name": "PlayPause",
                    "type": "Button",
                    "id": "d87d5e47-25a7-4fed-a508-917306d86da0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextTrack",
                    "type": "Button",
                    "id": "1e69136c-388c-40f5-b811-1b3e93a94587",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousTrack",
                    "type": "Button",
                    "id": "5a4ac182-fb28-4c50-b55a-2405be16ba24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeUp",
                    "type": "Button",
                    "id": "e77b33bf-6da4-433d-8667-dd362293afea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeDown",
                    "type": "Button",
                    "id": "fd16a1ef-1d8d-4c25-8a63-85d30e6b3426",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58576787-44c0-4f54-a6d9-f1f7660c14d9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be2bcd2a-b98e-4077-a78a-ed88529db241",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTrack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e5afa4d-7088-40da-81f9-81cd70ea2381",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousTrack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cac49b1e-bb46-4655-9198-857766d4c51c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea4b85ba-387a-405d-9bdb-9e143d536b02",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}